Extracted Strings to Resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MovieDb</string>
+    <string name="upcoming_releases">Proximos Estrenos</string>
+    <string name="emovie">eMovie</string>
 </resources>
