Get Popular Movies

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">MovieDb</string>
     <string name="upcoming_releases">Proximos Estrenos</string>
     <string name="emovie">eMovie</string>
+    <string name="popular_movies">Tendencia</string>
 </resources>
